--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sap-mocha",
+  "name": "sap-ui5-mocha",
   "version": "0.1.0",
   "description": "Mocha tests infrastructure with SAPUI5 modules ",
   "main": "index.js",
