--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Mocha tests infrastructure with SAPUI5 modules ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/mocha/bin/mocha"
   },
   "keywords": [
     "npm",
@@ -12,5 +12,9 @@
     "ui5"
   ],
   "author": "Frederico Bittencourt",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^3.5.3"
+  }
 }
