add API level unit tests

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Load UI5 Modules in pure JavaScript applications",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/mocha/bin/mocha test/*Test.js"
+    "test": "./node_modules/mocha/bin/mocha test/*Test.js",
+    "testwatcher": "node node_modules/mocha/bin/mocha test/*Test.js --colors --recursive --watch"
   },
   "keywords": [
     "npm",
