--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "license": "ISC",
   "devDependencies": {
     "chai": "^4.1.2",
-    "mocha": "^3.5.3"
+    "mocha": "^3.5.3",
+    "sinon": "^3.2.1",
+    "sinon-chai": "^2.13.0"
   }
 }
