--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "eslint .",
     "test": "./node_modules/mocha/bin/mocha test/*Test.js",
-    "test:debug": "node --inspect-brk ./node_modules/mocha/bin/mocha test/*Test.js",
+    "test:debug": "./node_modules/mocha/bin/mocha --inspect-brk test/*Test.js",
     "testwatcher": "node node_modules/mocha/bin/mocha test/*Test.js --colors --recursive --watch"
   },
   "keywords": [
