--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ui5-module-loader",
-  "version": "0.9.0",
-  "description": "Load UI5 Modules in pure JavaScript applications",
+  "name": "ui5-simple-require",
+  "version": "1.0.0",
+  "description": "Import UI5 modules into NodeJS applications, allowing isolation of UI5 components and injection of dependencies to create an isolated test environment",
   "main": "index.js",
   "scripts": {
     "lint": "eslint .",
@@ -14,7 +14,16 @@
     "mocha",
     "ui5"
   ],
-  "author": "Frederico Bittencourt",
+  "contributors": [
+    {
+      "name": "Frederico Bittencourt",
+      "email": "fred.rbittencourt@gmail.com"
+    },
+    {
+      "name": "Nathan Schneider",
+      "email": "nsschneider1@gmail.com"
+    }
+  ],
   "license": "ISC",
   "devDependencies": {
     "chai": "^4.1.2",
