--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "sinon-chai": "^2.13.0"
   },
   "dependencies": {
-    "deepmerge": "^2.0.1"
+    "deepmerge": "^2.0.1",
+    "lodash.set": "^4.3.2",
+    "lodash.topairs": "^4.3.0"
   }
 }
