--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "lint": "eslint .",
     "test": "./node_modules/mocha/bin/mocha test/*Test.js",
+    "coverage": "nyc npm run test",
     "test:debug": "./node_modules/mocha/bin/mocha --inspect-brk test/*Test.js",
     "testwatcher": "node node_modules/mocha/bin/mocha test/*Test.js --colors --recursive --watch"
   },
@@ -27,7 +28,9 @@
   "license": "ISC",
   "devDependencies": {
     "chai": "^4.1.2",
+    "eslint": "^6.8.0",
     "mocha": "^3.5.3",
+    "nyc": "^15.0.0",
     "sinon": "^3.2.1",
     "sinon-chai": "^2.13.0"
   },
