chore: update contributors

--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     {
       "name": "Nathan Schneider",
       "email": "nsschneider1@gmail.com"
+    },
+    {
+      "name": "Yuping Zuo",
+      "url": "https://github.com/zypA133510"
     }
   ],
   "license": "ISC",
