--- a/package.json
+++ b/package.json
@@ -43,8 +43,7 @@
     "sinon-chai": "^3.4.0"
   },
   "dependencies": {
-    "lodash.set": "^4.3.2",
-    "lodash.topairs": "^4.3.0",
+    "lodash": "^4.17.2",
     "deepmerge": "^4.2.2",
     "parent-module": "^2.0.0"
   }
