--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -2,10 +2,10 @@ name: Node CI
 
 on:
   pull_request:
-    branches: 
+    branches:
       - master
   push:
-    
+
 jobs:
   build:
 
@@ -13,7 +13,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [8.x, 10.x, 12.x]
+        node-version: [12.x, 14.x, 16.x, 18.x]
 
     steps:
     - uses: actions/checkout@v1
